configs/k8s/nexus3.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nexus3
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nexus3
  namespace: nexus3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus3
  serviceName: nexus3
  template:
    metadata:
      labels:
        app: nexus3
    spec:
      containers:
        - image: sonatype/nexus3:3.59.0
          imagePullPolicy: IfNotPresent
          name: nexus3
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 120
            httpGet:
              path: /
              port: 8081
              scheme: HTTP
            periodSeconds: 60
            timeoutSeconds: 30
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 120
            httpGet:
              path: /
              port: 8081
              scheme: HTTP
            periodSeconds: 60
            timeoutSeconds: 30
          ports:
            - containerPort: 8081
              name: nexus3
              protocol: TCP
          resources:
            limits:
              cpu: 1250m
              memory: 2Gi
            requests:
              cpu: 1m
              memory: 50Mi
          securityContext:
            readOnlyRootFilesystem: false
            runAsUser: 8484
            runAsGroup: 8484
          volumeMounts:
            - mountPath: /nexus-data
              name: nexus3
            - mountPath: /tmp
              name: tmp
      volumes:
        - name: tmp
          emptyDir: {}
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: nexus3
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 4Gi
        volumeMode: Filesystem
        volumeName: nexus3
---
apiVersion: v1
kind: Service
metadata:
  name: nexus3
  namespace: nexus3
spec:
  selector:
    app: nexus3
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus3
  namespace: nexus3
spec:
  rules:
    - host: nexus3.some-domain
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nexus3
                port:
                  number: 8081
